--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-ai/generativelanguage": "^0.2.0",
+    "google-auth-library": "^8.8.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
